--- a/HotChocolate.Issues.csproj
+++ b/HotChocolate.Issues.csproj
@@ -6,9 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-	  <PackageReference Include="HotChocolate" Version="13.9.7" />
-	  <PackageReference Include="HotChocolate.AspNetCore" Version="13.9.7" />
-	  <PackageReference Include="HotChocolate.Types.Analyzers" Version="13.9.7">
+	  <PackageReference Include="HotChocolate" Version="13.9.12" />
+	  <PackageReference Include="HotChocolate.AspNetCore" Version="13.9.12" />
+	  <PackageReference Include="HotChocolate.PersistedQueries.InMemory" Version="13.9.12" />
+	  <PackageReference Include="HotChocolate.Types.Analyzers" Version="13.9.12">
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		  <PrivateAssets>all</PrivateAssets>
 	  </PackageReference>
